--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^14.3.0",
     "next": "12.0.8",
+    "next-auth": "^4.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.49.0"
   },
   "devDependencies": {
     "eslint": "8.7.0",
