--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "dotenv": "^14.3.0",
     "next": "12.0.8",
     "next-auth": "^4.1.2",
-    "node-sass": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "sass": "^1.49.0"
   },
   "devDependencies": {
     "eslint": "8.7.0",
