--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.0.2",
     "dotenv": "^14.3.0",
     "next": "12.0.8",
     "next-auth": "^4.1.2",
     "react": "17.0.2",
+    "react-collapse": "^5.1.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "sass": "^1.49.0"
+    "sass": "^1.49.0",
+    "styled-components": "^5.3.3",
+    "swiper": "^7.4.1"
   },
   "devDependencies": {
     "eslint": "8.7.0",
