--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "dotenv": "^14.3.0",
     "next": "12.0.8",
     "next-auth": "^4.1.2",
+    "path": "^0.12.7",
     "react": "17.0.2",
     "react-collapse": "^5.1.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "sass": "^1.49.0",
+    "stream": "^0.0.2",
     "styled-components": "^5.3.3",
     "swiper": "^7.4.1"
   },
