--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.2",
+    "craco": "^0.0.3",
     "dotenv": "^14.3.0",
     "next": "12.0.8",
     "next-auth": "^4.1.2",
