--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^14.3.0",
     "next": "12.0.8",
     "next-auth": "^4.1.2",
+    "next-seo": "^5.0.0",
     "path": "^0.12.7",
     "react": "17.0.2",
     "react-collapse": "^5.1.1",
