--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-collapse": "^5.1.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-toastify": "^8.1.0",
     "sass": "^1.49.0",
     "stream": "^0.0.2",
     "styled-components": "^5.3.3",
