--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "babel-plugin-styled-components": "^2.0.2",
     "craco": "^0.0.3",
     "dotenv": "^14.3.0",
+    "libphonenumber-js": "^1.9.46",
+    "mongodb": "^4.3.1",
     "next": "12.0.8",
     "next-auth": "^4.1.2",
     "next-seo": "^5.0.0",
