--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "babel-plugin-styled-components": "^2.0.2",
     "craco": "^0.0.3",
     "dotenv": "^14.3.0",
-    "libphonenumber-js": "^1.9.46",
     "mongodb": "^4.3.1",
     "next": "12.0.8",
     "next-auth": "^4.1.2",
@@ -22,6 +21,7 @@
     "react-collapse": "^5.1.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-phone-number-input": "^3.1.45",
     "react-toastify": "^8.1.0",
     "sass": "^1.49.0",
     "stream": "^0.0.2",
