--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-seo": "^5.0.0",
     "path": "^0.12.7",
     "react": "17.0.2",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-collapse": "^5.1.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
