create and read user cards feature

--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ SUPER_USER_EMAIL=se7eestudiodedesign@gmail.com
 
 MONGODB_DATABASE=visitase7edb
 MONGODB_URI=mongodb+srv://se7eestudio:leP75F21TI7qvTk8@cluster0.3qirk.mongodb.net/visitase7edb?retryWrites=true&w=majority
+
+#Development Mercado Pago Credentials
+MERCADOPAGO_PUBLIC_KEY=TEST-345de14d-fccd-4daa-aa06-8633a4ecb980
+MERCADOPAGO_ACCESS_TOKEN=TEST-7244443121650739-092922-595ed83e60b72dfcf3a48bf567f18fad-152694762
