--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "dotenv": "^14.3.0",
     "mongodb": "^4.3.1",
     "next": "12.0.8",
-    "next-auth": "^4.1.2",
+    "next-auth": "^4.2.1",
     "next-seo": "^5.0.0",
+    "next-session": "^4.0.4",
     "path": "^0.12.7",
     "react": "17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
